mp1/src/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: non_empty_feature_list
    8             | %empty

    9 non_empty_feature_list: feature ';'
   10                       | non_empty_feature_list feature ';'
   11                       | error ';'

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID ':' TYPEID
   14        | OBJECTID ':' TYPEID ASSIGN expression

   15 formal_list: formal_list ',' formal
   16            | formal
   17            | %empty

   18 formal: OBJECTID ':' TYPEID

   19 case_list: OBJECTID ':' TYPEID DARROW expression ';'
   20          | case_list OBJECTID ':' TYPEID DARROW expression ';'

   21 let: OBJECTID ':' TYPEID assign IN expression
   22    | OBJECTID ':' TYPEID assign ',' let
   23    | error

   24 assign: ASSIGN expression
   25       | %empty
   26       | error

   27 expression_list: expression
   28                | expression_list ',' expression

   29 expression_list2: expression ';'
   30                 | expression_list2 expression ';'

   31 expression: OBJECTID ASSIGN expression
   32           | expression '.' OBJECTID '(' ')'
   33           | expression '.' OBJECTID '(' expression_list ')'
   34           | OBJECTID '(' ')'
   35           | OBJECTID '(' expression_list ')'
   36           | expression '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   38           | IF expression THEN expression ELSE expression FI
   39           | WHILE expression LOOP expression POOL
   40           | '{' expression_list2 '}'
   41           | LET let
   42           | CASE expression OF case_list ESAC
   43           | NEW TYPEID
   44           | ISVOID expression
   45           | expression '+' expression
   46           | expression '-' expression
   47           | expression '*' expression
   48           | expression '/' expression
   49           | '~' expression
   50           | expression '<' expression
   51           | expression LE expression
   52           | expression '=' expression
   53           | NOT expression
   54           | '(' expression ')'
   55           | OBJECTID
   56           | INT_CONST
   57           | STR_CONST
   58           | BOOL_CONST
   59           | error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 32 33 34 35 36 37 54
')' (41) 12 32 33 34 35 36 37 54
'*' (42) 47
'+' (43) 45
',' (44) 15 22 28
'-' (45) 46
'.' (46) 32 33 36 37
'/' (47) 48
':' (58) 12 13 14 18 19 20 21 22
';' (59) 4 5 6 9 10 11 19 20 29 30
'<' (60) 50
'=' (61) 52
'@' (64) 36 37
'{' (123) 5 6 12 40
'}' (125) 5 6 12 40
'~' (126) 49
error (256) 4 11 23 26 59
CLASS (258) 5 6
ELSE (259) 38
FI (260) 38
IF (261) 38
IN (262) 21
INHERITS (263) 6
LET (264) 41
LOOP (265) 39
POOL (266) 39
THEN (267) 38
WHILE (268) 39
CASE (269) 42
ESAC (270) 42
OF (271) 42
DARROW (272) 19 20
NEW (273) 43
ISVOID (274) 44
STR_CONST (275) 57
INT_CONST (276) 56
BOOL_CONST (277) 58
TYPEID (278) 5 6 12 13 14 18 19 20 21 22 36 37 43
OBJECTID (279) 12 13 14 18 19 20 21 22 31 32 33 34 35 36 37 55
ASSIGN (280) 14 24 31
NOT (281) 53
LE (282) 51
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3
class (48)
    on left: 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 5 6
non_empty_feature_list (50)
    on left: 9 10 11, on right: 7 10
feature (51)
    on left: 12 13 14, on right: 9 10
formal_list (52)
    on left: 15 16 17, on right: 12 15
formal (53)
    on left: 18, on right: 15 16
case_list (54)
    on left: 19 20, on right: 20 42
let (55)
    on left: 21 22 23, on right: 22 41
assign (56)
    on left: 24 25 26, on right: 21 22
expression_list (57)
    on left: 27 28, on right: 28 33 35 37
expression_list2 (58)
    on left: 29 30, on right: 30 40
expression (59)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59, on right: 12 14 19 20 21 24 27
    28 29 30 31 32 33 36 37 38 39 42 44 45 46 47 48 49 50 51 52 53
    54


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


State 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (feature_list)

    feature_list            go to state 15
    non_empty_feature_list  go to state 16
    feature                 go to state 17


State 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 13

   11 non_empty_feature_list: error . ';'

    ';'  shift, and go to state 19


State 14

   12 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID . ':' TYPEID
   14        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 15

    5 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 22


State 16

    7 feature_list: non_empty_feature_list .
   10 non_empty_feature_list: non_empty_feature_list . feature ';'

    OBJECTID  shift, and go to state 14

    $default  reduce using rule 7 (feature_list)

    feature  go to state 23


State 17

    9 non_empty_feature_list: feature . ';'

    ';'  shift, and go to state 24


State 18

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (feature_list)

    feature_list            go to state 25
    non_empty_feature_list  go to state 16
    feature                 go to state 17


State 19

   11 non_empty_feature_list: error ';' .

    $default  reduce using rule 11 (non_empty_feature_list)


State 20

   12 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 27
    formal       go to state 28


State 21

   13 feature: OBJECTID ':' . TYPEID
   14        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 29


State 22

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 23

   10 non_empty_feature_list: non_empty_feature_list feature . ';'

    ';'  shift, and go to state 31


State 24

    9 non_empty_feature_list: feature ';' .

    $default  reduce using rule 9 (non_empty_feature_list)


State 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 32


State 26

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 27

   12 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 28

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


State 29

   13 feature: OBJECTID ':' TYPEID .
   14        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 13 (feature)


State 30

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

   10 non_empty_feature_list: non_empty_feature_list feature ';' .

    $default  reduce using rule 10 (non_empty_feature_list)


State 32

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


State 33

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 34

   12 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 39


State 35

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 40


State 36

   14 feature: OBJECTID ':' TYPEID ASSIGN . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 56


State 37

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 38

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 39

   12 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 57


State 40

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 41

   59 expression: error .

    $default  reduce using rule 59 (expression)


State 42

   38 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 58


State 43

   41 expression: LET . let

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let  go to state 61


State 44

   39 expression: WHILE . expression LOOP expression POOL

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 62


State 45

   42 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 63


State 46

   43 expression: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 47

   44 expression: ISVOID . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 65


State 48

   57 expression: STR_CONST .

    $default  reduce using rule 57 (expression)


State 49

   56 expression: INT_CONST .

    $default  reduce using rule 56 (expression)


State 50

   58 expression: BOOL_CONST .

    $default  reduce using rule 58 (expression)


State 51

   31 expression: OBJECTID . ASSIGN expression
   34           | OBJECTID . '(' ')'
   35           | OBJECTID . '(' expression_list ')'
   55           | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 55 (expression)


State 52

   53 expression: NOT . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 68


State 53

   49 expression: '~' . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 69


State 54

   40 expression: '{' . expression_list2 '}'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression_list2  go to state 70
    expression        go to state 71


State 55

   54 expression: '(' . expression ')'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 72


State 56

   14 feature: OBJECTID ':' TYPEID ASSIGN expression .
   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 14 (feature)


State 57

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 82


State 58

   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   38           | IF expression . THEN expression ELSE expression FI
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 59

   23 let: error .

    $default  reduce using rule 23 (let)


State 60

   21 let: OBJECTID . ':' TYPEID assign IN expression
   22    | OBJECTID . ':' TYPEID assign ',' let

    ':'  shift, and go to state 84


State 61

   41 expression: LET let .

    $default  reduce using rule 41 (expression)


State 62

   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   39           | WHILE expression . LOOP expression POOL
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression

    LOOP  shift, and go to state 85
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 63

   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | CASE expression . OF case_list ESAC
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression

    OF   shift, and go to state 86
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 64

   43 expression: NEW TYPEID .

    $default  reduce using rule 43 (expression)


State 65

   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | ISVOID expression .
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 44 (expression)


State 66

   31 expression: OBJECTID ASSIGN . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 87


State 67

   34 expression: OBJECTID '(' . ')'
   35           | OBJECTID '(' . expression_list ')'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55
    ')'         shift, and go to state 88

    expression_list  go to state 89
    expression       go to state 90


State 68

   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression
   53           | NOT expression .

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 53 (expression)


State 69

   32 expression: expression . '.' OBJECTID '(' ')'
   33           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   45           | expression . '+' expression
   46           | expression . '-' expression
   47           | expression . '*' expression
   48           | expression . '/' expression
   49           | '~' expression .
   50           | expression . '<' expression
   51           | expression . LE expression
   52           | expression . '=' expression

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 49 (expression)


State 70

   30 expression_list2: expression_list2 . expression ';'
   40 expression: '{' expression_list2 . '}'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '}'         shift, and go to state 91
    '('         shift, and go to state 55

    expression  go to state 92


State 71
